# chesslens

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: ponytail-audit.md  ponytail-debt.md  ponytail-help.md  ponytail-review.md
.claude/hooks/: ponytail-activate.js  ponytail-config.js  ponytail-instructions.js  ponytail-mode-tracker.js  ponytail-runtime.js
.claude/skills/ponytail-help/: SKILL.md
docs/: architecture.md  index.md  roadmap.md  vision.md
docs/decisions/: 0001-litellm-provider-abstraction.md  0002-typer-cli.md  0003-stockfish-local.md  0004-in-process-scheduler.md
docs/research/: competitive-analysis-2026-06.md
migrations/: env.py
migrations/versions/: 0001_baseline_schema.py  0002_add_users_table.py  f4733a0b8caa_add_analysis_detail_cache_columns.py
scripts/: test_analyzer_live.py  test_fetcher_live.py  test_parser_live.py
src/chesslens/: config.py
src/chesslens/core/: analyzer.py  fetcher.py  jobs.py  openings.py  parser.py  patterns.py  renderer.py  reporter.py
src/chesslens/db/: __init__.py  models.py  session.py
src/chesslens/delivery/: api.py  auth.py  cli.py  security.py
src/chesslens/templates/: base.html  game.html  (+6 more)
tests/: test_analyzer.py  test_api.py  test_auth_dependencies.py  test_auth_login.py  test_auth_refresh.py  test_auth_register.py  test_cli_game.py  test_cli_report.py  test_cli_stats.py  test_config_startup.py  test_db.py  test_fetcher.py  test_jobs.py  test_openings.py  test_parser.py  test_patterns.py  test_renderer.py  test_reporter.py  test_routes_scoping.py
tests/fixtures/: archives.json  game_with_clk.pgn  games_2026_05.json
