[project]
name = "chesslens"
version = "0.1.0"
description = "Personal chess analysis tool with monthly Wrapped-style reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "python-chess>=1.10",
    "stockfish>=3.28",
    "pandas>=2.2",
    "litellm>=1.40",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.scripts]
chesslens = "chesslens.delivery.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chesslens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
